--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -31,9 +31,9 @@ work:
     # endDate: ""
     summary: |
         - 직급 : 책임
-        - 담당업무 : 백엔드 개발 PL
+        - 담당업무 : 백엔드 개발
         - 고용형태 : 정규직
-        - 부서명 : 모빌리티융합팀
+        - 부서명 : 모빌리티사업팀
 
   - company: "한화시스템"
     startDate: "2015-12-29"
